[workspace]
resolver = "2"
members = [
    "raft-common",
    "raft-ebpf",
    "raft",
    "raft-cli",
]
# raft-ebpf requires special build target (bpfel-unknown-none)
default-members = [
    "raft-common",
    "raft",
    "raft-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80.0"

[workspace.dependencies]
aya = "0.13"
aya-ebpf = "0.1"
aya-log = "0.2"
aya-log-ebpf = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
rand = "0.8"
bytes = "1"
