[package]
name = "raft-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
user = ["std"]
std = []
aya = ["dep:aya"]

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive"] }
heapless = { version = "0.8", features = ["serde"] }
aya = { version = "0.13", optional = true }

[dev-dependencies]
serde_json = "1.0"

[lib]
path = "src/lib.rs"
